# ros2-robot-status-reporter

./: README.md
robot_status_reporter/: CMakeLists.txt  package.xml
robot_status_reporter/launch/: status_reporter.launch.py
robot_status_reporter/msg/: DeliveryStatus.msg
robot_status_reporter/robot_status_reporter/: status_aggregator.py
